--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,4 +12,6 @@
   <body>
     <%= yield %>
   </body>
+  <br>
+  <%= link_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
 </html>
