--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -5,6 +5,7 @@
   <%= form.text_area :description %><br />
   <%= form.label :price %>
   $<%= form.text_field :price %><br />
+  <%= form.file_field :image %>
 
   <% if product.errors.any? %>
     <div id="error_explanation">
