--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,9 @@
     <%= yield %>
   </body>
   <br>
-  <%= link_to('Sign Out', destroy_user_session_path, method: :delete) if current_user %>
+  <% if current_user %>
+    <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>
+  <% else %>
+    <%= link_to('Sign In with Stripe', user_stripe_connect_omniauth_authorize_path) %>
+  <% end %>
 </html>
