--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,9 +12,17 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <% if product.image.attached? %>
+          <td><%= image_tag product.image %></td>
+        <% end %>
+        <td><hr></td>
         <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if product.user == current_user %>
+          <td><%= link_to 'Edit', edit_product_path(product) %></td>
+          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
+        <%else%>
+          <td><%= link_to 'Purchase', product, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
