--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,13 @@
 <p id="notice"><%= notice %></p>
-<% if @product.image.attached? %>
-  <%= image_tag @product.image %>
-<% end %>
-<br>
-<%= link_to "Purchase for $#{@product.price}", edit_product_path(@product) %> |
-
-<%= link_to('Edit', edit_product_path(@product)) if @product.user == current_user %> |
-<%= link_to 'Back', products_path %>
+<table>
+  <% if @product.image.attached? %>
+    <td><%= image_tag @product.image %></td>
+  <% end %>
+  <% if @product.user == current_user %>
+    <td><%= link_to 'Edit', edit_product_path(@product) %></td>
+    <td><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
+  <%else%>
+    <td><%= link_to "Purchase for $#{@product.price}", @product, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
+  <%end%>
+  <td><%= link_to 'Back', products_path %></td>
+</table>
