--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://js.stripe.com/v3/"></script>
     <title>StripeMarketplace</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
