--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,19 +3,16 @@
 <h1>Products</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
   <tbody>
+    <th>Image</th>
+    <th>Title</th>
+    <th>Description</th>
+    <th>Price</th>
+    <th></th>
     <% @products.each do |product| %>
       <tr>
-        <% if product.image.attached? %>
-          <td><%= image_tag product.image %></td>
-        <% end %>
-        <td><hr></td>
+        <%= render 'product', product: product %>
         <td><%= link_to 'Show', product %></td>
       </tr>
     <% end %>
