--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,19 @@
 <p id="notice"><%= notice %></p>
 <table>
-  <% if @product.image.attached? %>
-    <td><%= image_tag @product.image %></td>
-  <% end %>
-  <% if @product.user == current_user %>
-    <td><%= link_to 'Edit', edit_product_path(@product) %></td>
-    <td><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
-  <%else%>
-    <td><%= link_to "Checkout", product_checkout_path(@product), method: :post %></td>
-  <%end%>
-  <td><%= link_to 'Back', products_path %></td>
+  <th>Image</th>
+  <th>Title</th>
+  <th>Description</th>
+  <th>Price</th>
+  <th colspan="3"> Actions </th>
+  <tr>
+    <%= render 'product', product: @product %>
+
+    <% if @product.user == current_user %>
+      <td><%= link_to 'Edit', edit_product_path(@product) %></td>
+      <td><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
+    <%else%>
+      <td><%= link_to "Checkout", product_checkout_path(@product), method: :post %></td>
+    <%end%>
+    <td><%= link_to 'Back', products_path %></td>
+  </tr>
 </table>
