--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,4 +5,4 @@
 <% end %>
 <td><%= product.title %></td>
 <td><%= product.description %></td>
-<td><%= product.price %></td>
+<td><%= product.display_price %></td>
