--- a/app/views/products/purchase_success.html.erb
+++ b/app/views/products/purchase_success.html.erb
@@ -1,1 +1,9 @@
 Thanks for your purchase!
+<hr>
+<p>
+  Product:
+  <%= render 'product', product: @product %>
+</p>
+
+<hr>
+<%= link_to 'Back', products_path %>
