Include payment details on the receipt page

--- a/app/views/products/purchase_success.html.erb
+++ b/app/views/products/purchase_success.html.erb
@@ -1,5 +1,9 @@
 Thanks for your purchase!
 <hr>
+<%= "Paid with #{@payment_info['last4']} (#{@payment_info['brand']})" %>
+<br>
+A receipt will be sent to <%= "email" %>
+<br>
 <p>
   Product:
   <%= render 'product', product: @product %>
